--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         }
 
         .not-sure {
-            background: url(./img/not-sure.gif);
+            background: url(./img/not-sure.svg);
+            background-size: cover;
+            background-position: center;
         }
 
     </style>
