--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
             color: white;
             font-family: Arial, helvetica, sans-serif;
             text-align: center;
+            height: 100vh;
+            width: 100vw;
         }
 
         .makea-text {
