--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
             color: white;
             font-family: Arial, helvetica, sans-serif;
             text-align: center;
+            overflow: hidden;
             height: 100vh;
             width: 100vw;
         }
 
         .makea-text {
-            font-size: 50px;
+            font-size: 6vw;
         }
 
         .makea-text-big {
-            font-size: 150px;
+            font-size: 10vw;
         }
 
         .makea {
